<resources>
    <string name="app_name">[RED]Android</string>
    <string name="app_version_unknown">[RED]Android</string>
    <string name="login">Login</string>
    <string name="announcements">Announcements</string>
    <string name="blog">Blog</string>
    <string name="profile">Profile</string>
    <string name="conversations">Inbox</string>
    <string name="messages">Messages</string>
    <string name="top10">Top 10</string>
    <string name="top100">Top 100</string>
    <string name="top250">Top 250</string>
    <string name="notifications">Torrent Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="new_subscriptions">New Subscriptions!</string>
    <string name="show_all">SHOW ALL</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="forums">Forums</string>
    <string name="artist">Artist</string>
    <string name="torrent_group">Torrent Group</string>
    <string name="torrents">Torrents</string>
    <string name="users">Users</string>
    <string name="artists">Artists</string>
    <string name="requests">Requests</string>
    <string name="barcode_lookup">Barcode Lookup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="avatar">Avatar</string>
    <string name="header_image">Header Image</string>
    <string name="search">Search</string>
    <string name="search_terms">Search Terms</string>
    <string name="search_tags">Tags (eg: hip.hop indie)</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="download">Download</string>
    <string name="send_to_pywa">Send to PyWA</string>
    <string name="download_to_device">Save to device</string>
    <string name="cancel">Cancel</string>
    <string name="stats">Stats</string>
    <string name="snatches">Snatches</string>
    <string name="uploads">Uploads</string>
    <string name="uploaded">Uploaded</string>
    <string name="downloaded">Downloaded</string>
    <string name="paranoia">Paranoia</string>
    <string name="send_message">Send Message</string>
    <string name="subject">Subject</string>
    <string name="redandroid_logo">REDAndroid Logo</string>
    <string name="action_settings">Settings</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="created">Created</string>
    <string name="record_label">Record Label</string>
    <string name="catalogue_number">Catalogue Number</string>
    <string name="release_type">Release Type</string>
    <string name="accept_bitrates">Acceptable Bitrates</string>
    <string name="accept_formats">Acceptable Formats</string>
    <string name="accept_media">Acceptable Media</string>
    <string name="votes">Votes</string>
    <string name="vote">Vote</string>
    <string name="bounty">Bounty</string>
    <string name="filled">Filled</string>
    <string name="filled_by">Filled By</string>
    <string name="by">by</string>
    <string name="tags">Tags</string>
    <string name="after_tax">Bounty after tax</string>
    <string name="request">Request</string>
    <string name="delete">Delete</string>
    <string name="load_terms">Load Terms</string>
    <string name="scanned">Scanned</string>
    <string name="add_barcodes">Scan Barcodes</string>
    <string name="delete_all">Delete All</string>
    <string name="preferences">Preferences</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="toggle_nofications">Toggle Notifications</string>
    <string name="clear">Clear</string>
    <string name="posts">Posts:</string>
    <string name="topics">Topics</string>
    <string name="last_post">Last Post:</string>
    <string name="last_post_by">Last post by %1$s %2$s</string>
    <string name="author">Author:</string>
    <string name="go_to_last_read">Last read</string>
    <string name="last_page">Last Page</string>
    <string name="select_page">Select Page</string>
    <string name="view_poll">View poll</string>
    <string name="sticky_thread">Sticky Thread</string>
    <string name="locked_thread">Locked Thread</string>
    <string name="toggle_subscription">Toggle subscription</string>
    <string name="reply">Reply</string>
    <string name="manage_conversation">Manage Conversation</string>
    <string name="sticky">Sticky</string>
    <string name="mark_unread">Mark as Unread</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="compose_hint">Enter your reply here, going back will save the draft automatically.</string>
    <string name="discard">Discard</string>
    <string name="preview">Preview</string>
    <string name="size">Size</string>
    <string name="data_transferred">Data Transferred</string>
    <string name="similar_artists">Similar Artists</string>
    <string name="copy_url">Copy URL</string>
    <string name="new_folder">New folder</string>
    <string name="pref_img_on_wifi_only">Load Images on Wifi Only</string>
    <string name="key_pref_img_wifi">pref_img_wifi_only</string>
    <string name="pref_disable_updater">Disable Periodic Update Checking</string>
    <string name="key_pref_disable_updater">pref_disable_updater</string>
    <string name="pref_updater_description">To force an update check press the version number below</string>
    <string name="pref_wm">WhatManager Server</string>
    <string name="pref_wm_host">Hostname</string>
    <string name="pref_wm_port">Port</string>
    <string name="pref_wm_password">Password</string>
    <string name="pref_wm_user">User</string>
    <string name="key_pref_wm_host">pref_wm_host</string>
    <string name="key_pref_wm_port">pref_wm_port</string>
    <string name="key_pref_wm_user">pref_wm_user</string>
    <string name="key_pref_wm_password">pref_wm_password</string>
    <string name="pref_pywa">PyWhatAuto Server</string>
    <string name="pref_pywa_host">Hostname</string>
    <string name="pref_pywa_port">Port</string>
    <string name="pref_pywa_password">Password</string>
    <string name="key_pref_pywa_host">pref_pywa_host</string>
    <string name="key_pref_pywa_port">pref_pywa_port</string>
    <string name="key_pref_pywa_password">pref_pywa_password</string>
    <string name="pref_default_download_method">pref_default_download_method</string>
    <string name="default_download_method">Download Method</string>
    <string name="key_pref_version_name">pref_verion_name</string>
    <string name="key_pref_num_notifications">key_pref_num_notification</string>
    <string name="key_pref_new_subscriptions">key_pref_new_subscriptions</string>
    <string name="key_pref_new_messages">key_pref_new_messages</string>
    <string name="fontawesome_font">fontawesome-webfont.ttf</string>
    <string name="roboto_black">Roboto-Black.ttf</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="pref_light_layout">Use Light Layout for Forums</string>
    <string name="key_pref_light_layout">pref_light_layout</string>
    <string name="pref_light_theme">Use Light Material Theme</string>
    <string name="key_pref_light_theme">pref_light_theme</string>
    <string name="pref_torrent_download_path">Torrent Download Directory</string>
    <string name="pref_torrent_download_path_summary">Optional directory to place downloaded torrents in</string>
    <string name="key_pref_torrent_download_path">pref_torrent_download_path</string>
    <string name="ranks">Ranks</string>
    <string name="overall">Overall</string>
    <string name="artists_added">Artists added</string>
    <string name="posts_made">Posts made</string>
    <string name="bounty_spent">Bounty spent</string>
    <string name="requests_filled">Requests filled</string>
    <string name="torrents_uploaded">Torrents uploaded</string>
    <string name="data_downloaded">Data downloaded</string>
    <string name="data_uploaded">Data uploaded</string>
    <string name="invited">Invited</string>
    <string name="info">Info</string>
    <string name="send">Send</string>
    <string name="updates">Updates</string>
    <string name="pref_top_torrents">pref_top_torrents</string>
    <string name="top_torrents_label">Number of top torrents to show</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="joined">Joined</string>
    <string name="logging_in">Logging in</string>
    <string name="error_cookie_expired">Cookie expired - please log in</string>
    <string name="message_no_announcements">No announcements</string>
    <string name="read_more">READ MORE</string>
    <string name="show_less">SHOW LESS</string>
    <string name="message_nothing_to_see">Nothing to see here</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_updates">Updates</string>
    <string name="drawer_changelog">Change Log</string>
    <string name="zerogb">0 GB</string>
    <string name="ratio">Ratio:</string>
    <string name="infinite">∞</string>
    <string name="zeroratio">0.00</string>
    <string name="buffer">Buffer:</string>
    <string name="user">User</string>
    <string name="release_info">%1$s - %2$s [%3$d] [%4$s]</string>
    <string name="release_info_simple">%1$d %2$s \u2022 %3$d versions</string>
    <string name="torrent_format">%1$s / %2$s / %3$s</string>
    <string name="uploaded_by">Uploaded by %1$s %2$s</string>
    <string name="hide_description">HIDE DESCRIPTION</string>
    <string name="show_description">SHOW DESCRIPTION</string>
    <string name="error_empty_search">Please enter a search term</string>
    <string name="user_search">User search term</string>
    <string name="torrent_search">Torrent search term</string>
    <string name="request_search">Request search term</string>
    <string name="artist_search">Artist search term</string>
    <string name="release_title">%1$d - %2$s</string>
    <string name="uploaded_label">Up:</string>
    <string name="downloaded_label">Down:</string>
    <string name="joined_when">Joined: %1$s</string>
    <string name="last_seen_when">Last seen: %1$s</string>
    <string name="user_ratio">Ratio: %1$.2f / %2$.4f</string>
    <string name="pref_show_images">pref_load_images</string>
    <string name="show_images">Load Images</string>
    <string name="release">Release</string>
    <string name="from">From</string>
    <string name="system">System</string>
    <string name="shortcut_top10_label">Top 10</string>
    <string name="shortcut_forums_label">Forums</string>
    <string name="shortcut_profile_label">Profile</string>
    <string name="crashReported">Crash Reported</string>
    <string name="recipient">Recipient</string>
    <string name="message">Message</string>
    <string name="top_10_day">Today</string>
    <string name="top_10_week">This week</string>
    <string name="top_10_all_time">All time</string>
    <string name="top_10_snatched">Most snatched</string>
    <string name="top_10_data">Data transferred</string>
    <string name="top_10_best_seeded">Best seeded</string>
    <string name="key_pref_default_download_location">pref_default_download_location</string>
    <string name="label_default_download_location">Default Download Location</string>
    <string name="album_art">Album Art</string>
    <string name="various_artists">Various Artists</string>
    <string name="the_what_cd">The What CD</string>
    <string name="_2008_original_release_web_v0_vbr">[2008] - [Original Release/WEB/V0 (VBR)]</string>
    <string name="alternative_vanity_house_dubstep">alternative, vanity.house, dubstep</string>
</resources>