<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            app:tabMode="scrollable"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.TabItem
                android:text="@string/top_10_day"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem
                android:text="@string/top_10_week"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <!--<android.support.design.widget.TabItem-->
                <!--android:text="@string/top_10_month"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="wrap_content"/>-->

            <!--<android.support.design.widget.TabItem-->
                <!--android:text="@string/top_10_year"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="wrap_content"/>-->

            <android.support.design.widget.TabItem
                android:text="@string/top_10_all_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem
                android:text="@string/top_10_snatched"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem
                android:text="@string/top_10_data"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem
                android:text="@string/top_10_best_seeded"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/activity_list"/>
</LinearLayout>