<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Flat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/top_10_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/album_art"
                android:scaleType="centerCrop" />

            <jp.shts.android.library.TriangleLabelView
                android:id="@+id/rank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                app:backgroundColor="@color/white"
                app:corner="leftTop"
                app:labelCenterPadding="0dp"
                app:primaryTextColor="@color/primary_text"
                app:primaryTextSize="@dimen/text_title" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/various_artists"
                android:textSize="@dimen/text_large_headline" />

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/release_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_what_cd"
                android:textSize="@dimen/text_large_headline" />

            <TextView
                android:id="@+id/release_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2008_original_release_web_v0_vbr"
                android:textSize="@dimen/text_small_body" />

            <TextView
                android:id="@+id/release_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alternative_vanity_house_dubstep"
                android:textSize="@dimen/text_small_body"
                android:textStyle="italic" />

            <include layout="@layout/swarm_activity_view" />
        </LinearLayout>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@id/post_info"-->
        <!--android:background="#FAFAFA"-->
        <!--/>-->
    </LinearLayout>
</android.support.v7.widget.CardView>