<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/default_gap"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <ImageButton
        android:id="@+id/send_message_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_send_24dp"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:tint="@color/accent"
        android:layout_alignParentRight="true"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/send_message_btn"
        >

      <EditText
          android:id="@+id/username"
          android:maxLines="1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/recipient"
          android:inputType="textEmailAddress"
          />
    </android.support.design.widget.TextInputLayout>
  </RelativeLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/subject"
      >
    <EditText
        android:id="@+id/message_subject"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/message"
      >
    <EditText
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </android.support.design.widget.TextInputLayout>
</LinearLayout>